--- a/CalculatorParser/CalculatorParser.vcxproj
+++ b/CalculatorParser/CalculatorParser.vcxproj
@@ -143,13 +143,23 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
+    <Text Include="resuly.txt" />
+    <Text Include="source.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ast.h" />
+    <ClInclude Include="lex.h" />
+    <ClInclude Include="parser.h" />
+    <ClInclude Include="scanner.h" />
+    <ClInclude Include="SimpleRuntime.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="token.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CalculatorParser.cpp" />
+    <ClCompile Include="lex.cpp" />
+    <ClCompile Include="parser.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
