--- a/CalculatorParser/CalculatorParser.vcxproj
+++ b/CalculatorParser/CalculatorParser.vcxproj
@@ -155,6 +155,7 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="token.h" />
+    <ClInclude Include="util.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CalculatorParser.cpp" />
