--- a/CalculatorParser/CalculatorParser.vcxproj.filters
+++ b/CalculatorParser/CalculatorParser.vcxproj.filters
@@ -46,6 +46,9 @@
     <ClInclude Include="SimpleRuntime.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="util.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
