--- a/CalculatorParser/CalculatorParser.vcxproj.filters
+++ b/CalculatorParser/CalculatorParser.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="util.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="object.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
