--- a/CalculatorParser/CalculatorParser.vcxproj
+++ b/CalculatorParser/CalculatorParser.vcxproj
@@ -151,7 +151,7 @@
     <ClInclude Include="object.h" />
     <ClInclude Include="parser.h" />
     <ClInclude Include="scanner.h" />
-    <ClInclude Include="SimpleRuntime.h" />
+    <ClInclude Include="stackmachine.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="token.h" />
@@ -160,7 +160,9 @@
   <ItemGroup>
     <ClCompile Include="CalculatorParser.cpp" />
     <ClCompile Include="lex.cpp" />
+    <ClCompile Include="object.cpp" />
     <ClCompile Include="parser.cpp" />
+    <ClCompile Include="stackmachine.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
