--- a/CalculatorParser/CalculatorParser.vcxproj.filters
+++ b/CalculatorParser/CalculatorParser.vcxproj.filters
@@ -51,10 +51,13 @@
     <ClInclude Include="CalculatorParser.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="svm.h">
+    <ClInclude Include="svm_codes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="svm_codes.h">
+    <ClInclude Include="codegen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="svm.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -74,7 +77,7 @@
     <ClCompile Include="object.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="svm.cpp">
+    <ClCompile Include="codegen.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
